<resources>
    <string name="app_name">Hello World</string>
    <string name="myName">Roger Van Wyk</string>
    <string name="myJob">App Developer</string>
    <string name="reviewOne">Review One</string>
    <string name="reviewTwo">Review Two</string>
    <string name="reviewThree">Review Three</string>
    <string name="reviewerOneName">Person One</string>
    <string name="reviewerTwoName">Person Two</string>
    <string name="reviewerThreeName">Person Three</string>
    <string name="experienceTitleTxt">Summarise my experiences</string>
    <string name="experiencePeriod">Dec 2017 - Current</string>
    <string name="contactTitle">Contact</string>
    <string name="contactNumber">+27 789 871 987</string>
    <string name="contactEmail">roger.vanwyk@gmail.com</string>
    <string name="contactAddress">Centurion, South Africa</string>
    <string name="reviewerOne">Person One</string>
    <string name="reviewerTwo">Person Two</string>
    <string name="reviewerThree">Person Three</string>
    <string name="jobSuccess">Success</string>
    <string name="jobRatings">Ratings</string>
    <string name="aboutMe">About Me</string>
    <string name="experienceTitle">Experience</string>
    <string name="reviewTitleTxt">Review</string>
    <string name="aboutMeTitle">About me</string>
    <string name="aboutMeTxt">todo</string>
    <string name="skillsTxt">Skills</string>
    <string name="skillsLocation">todo</string>
    <string name="experienceApplicationsTitle">Applications</string>
    <string name="experienceApplicationsTxt">Java|Kotlin|JavaScript|Ruby</string>
    <string name="experienceApplicationsPeriod">Feb 2018 - Current</string>
    <string name="experienceWebTitle">Wed Design</string>
    <string name="experienceWebTxt">todo</string>
    <string name="experienceWebPeriod">Dec 2017 - Current</string>
    <string name="experienceAirforceTitle">Air Traffic Controller</string>
    <string name="experienceAirforceTxt">SA Air Force</string>
    <string name="experienceAirforcePeriod">14 Jan 2004 – 31 Aug 2017</string>
    <string name="skillsTitle">Skills</string>
    <string name="toDo">TODO</string>
    <string name="categoryOne">Portfolio</string>
    <string name="categoryTwo">About Me</string>
    <string name="categoryThree">Qualification</string>
    <string name="categoryFour">Career</string>
    <string name="qualificationOneTxtString">Android Nanodegree</string>
    <string name="qualificationTwoTxtString">Online Marketing</string>
    <string name="qualificationThreeTxtString">Web Design</string>
    <string name="qualificationFourTxtString">Front End Libraries</string>
    <string name="portfolioTitleTxtString">Apps</string>
    <string name="subTitleTxt">Portfolio</string>
    <string name="subTitleOneTxtString">Android</string>
    <string name="subTitleTwoTxtString">Web</string>
</resources>